[package]
name = "token-vesting"
version = "0.1.0"
authors = ["Elliott Benisty <elliott@bonfida.com>", "Lucas Chaumeny <lucas@bonfida.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "fuzz"
]

[features]
no-entrypoint = []
test-bpf = []
fuzz = ["arbitrary", "honggfuzz"]

[dependencies]
thiserror = "1.0.23"
num-traits = "0.2"
num-derive = "0.3"
arrayref = "0.3.6"
solana-program = "1.14.17"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1", features = ["no-entrypoint"] }
arbitrary = { version = "0.4", features = ["derive"], optional = true }
honggfuzz = { version = "0.5", optional = true }
getrandom = { version = "0.1.14", features = ["dummy"] }

[dev-dependencies]
solana-sdk = "1.14.17"
solana-program-test = "1.14.17"
tokio = { version = "1.0", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]
